Documentation example of AdwViewStack missing an </object>
See title, the GtkBuildable here is missing an </object>
at the end: https://gnome.pages.gitlab.gnome.org/libadwaita/doc/main/class.ViewStack.html#adwviewstack-as-gtkbuildable
See title, the GtkBuildable here is missing an </object>
at the end: https://gnome.pages.gitlab.gnome.org/libadwaita/doc/main/class.ViewStack.html#adwviewstack-as-gtkbuildable