view-stack: Add missing </object> in docs

Fixes https://gitlab.gnome.org/GNOME/libadwaita/-/issues/404


(cherry picked from commit 73ae3111c65472a7ae635bf44caa22dbc58375b0)